--- a/1.basic/website/daraz-clone/src/index.html
+++ b/1.basic/website/daraz-clone/src/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
   </head>
-  <body>
+  <body class="bg-[#F5F5F5]">
     <!-- Start header -->
     <header class="header_area w-full bg-primary" id="header">
       <div class="container">
@@ -3008,6 +3008,215 @@
       </div>
     </section>
     <!-- End home -->
+
+    <!-- Start feature -->
+    <section class="feature_area" id="feature">
+      <div class="container">
+        <!-- feature top -->
+        <div
+          class="feature_top bg-[#FFE8DE] bg-opacity-70 hover:bg-opacity-100 p-3 rounded-sm">
+          <ul class="flex flex-wrap items-cente justify-between text-sm">
+            <li class="border-r-2 border-r-gray-300 pr-3">
+              <a href="#" class="capitalize flex space-x-2">
+                <span class="icon"
+                  ><img src="./img/feature/safe.png" alt=""
+                /></span>
+                <span>Safe Payment</span>
+              </a>
+            </li>
+            <!-- end of feature top li 01 -->
+
+            <li class="border-r-2 border-r-gray-300 pr-3">
+              <a href="#" class="capitalize flex space-x-2">
+                <span class="icon"
+                  ><img src="./img/feature/delivery.png" alt=""
+                /></span>
+                <span>Nationwide Delivery</span>
+              </a>
+            </li>
+            <!-- end of feature top li 02 -->
+
+            <li class="border-r-2 border-r-gray-300 pr-3">
+              <a href="#" class="capitalize flex space-x-2">
+                <span class="icon"
+                  ><img src="./img/feature/return.png" alt=""
+                /></span>
+                <span>Free & Easy Returns</span>
+              </a>
+            </li>
+            <!-- end of feature top li 03 -->
+
+            <li class="border-r-2 border-r-gray-300 pr-3">
+              <a href="#" class="capitalize flex space-x-2">
+                <span class="icon"
+                  ><img src="./img/feature/guaranteed.png" alt=""
+                /></span>
+                <span>Best Price Guaranteed</span>
+              </a>
+            </li>
+            <!-- end of feature top li 04 -->
+
+            <li class="border-r-2 border-r-gray-300 pr-3">
+              <a href="#" class="capitalize flex space-x-2">
+                <span class="icon"
+                  ><img src="./img/feature/authentic.png" alt=""
+                /></span>
+                <span>100% Authentic Products</span>
+              </a>
+            </li>
+            <!-- end of feature top li 05 -->
+
+            <li class="">
+              <a href="#" class="capitalize flex space-x-2">
+                <span class="icon"
+                  ><img src="./img/feature/verify.png" alt=""
+                /></span>
+                <span>Daraz Verified</span>
+              </a>
+            </li>
+            <!-- end of feature top li 06 -->
+          </ul>
+        </div>
+        <!-- end of feature top -->
+
+        <!-- feature bottom -->
+        <div class="feature_bottom py-5 my-5 bg-white shadow-lg rounded-2xl">
+          <ul class="text-sm grid gird-cols-5 lg:grid-cols-9 gap-2">
+            <li
+              class="inline-block text-center border-r-2 border-r-gray-300 pr-2">
+              <a href="#" class="flex flex-col items-center justify-center">
+                <img
+                  src="./img/feature/low_price.png"
+                  class="w-20 h-20 object-cover text-center" />
+                <span class="py-2 hover:text-primary">Everyday Low Price!</span>
+              </a>
+            </li>
+            <!-- end of feature bottom li 01 -->
+
+            <li
+              class="inline-block text-center border-r-2 border-r-gray-300 pr-2">
+              <a href="#" class="flex flex-col items-center justify-center">
+                <img
+                  src="./img/feature/free_delivery.png"
+                  class="w-20 h-20 object-cover text-center" />
+                <span class="py-2 hover:text-primary">Free Delivery</span>
+              </a>
+            </li>
+            <!-- end of feature bottom li 02 -->
+
+            <li
+              class="inline-block text-center border-r-2 border-r-gray-300 pr-2">
+              <a href="#" class="flex flex-col items-center justify-center">
+                <img
+                  src="./img/feature/fashion.png"
+                  class="w-20 h-20 object-cover text-center" />
+                <span class="py-2 hover:text-primary">Fashion</span>
+              </a>
+            </li>
+            <!-- end of feature bottom li 03 -->
+
+            <li
+              class="inline-block text-center border-r-2 border-r-gray-300 pr-2">
+              <a href="#" class="flex flex-col items-center justify-center">
+                <img
+                  src="./img/feature/beauty.png"
+                  class="w-20 h-20 object-cover text-center" />
+                <span class="py-2 hover:text-primary">Beauty & Glamour</span>
+              </a>
+            </li>
+            <!-- end of feature bottom li 04 -->
+
+            <li
+              class="inline-block text-center border-r-2 border-r-gray-300 pr-2">
+              <a href="#" class="flex flex-col items-center justify-center">
+                <img
+                  src="./img/feature/mart.png"
+                  class="w-20 h-20 object-cover text-center" />
+                <span class="py-2 hover:text-primary">Mart</span>
+              </a>
+            </li>
+            <!-- end of feature bottom li 05 -->
+
+            <li
+              class="inline-block text-center border-r-2 border-r-gray-300 pr-2">
+              <a href="#" class="flex flex-col items-center justify-center">
+                <img
+                  src="./img/feature/makeover.png"
+                  class="w-20 h-20 object-cover text-center" />
+                <span class="py-2 hover:text-primary">Home Makeover</span>
+              </a>
+            </li>
+            <!-- end of feature bottom li 06 -->
+
+            <li
+              class="inline-block text-center border-r-2 border-r-gray-300 pr-2">
+              <a href="#" class="flex flex-col items-center justify-center">
+                <img
+                  src="./img/feature/best_price.png"
+                  class="w-20 h-20 object-cover text-center" />
+                <span class="py-2 hover:text-primary"
+                  >Best Price Guaranteed</span
+                >
+              </a>
+            </li>
+            <!-- end of feature bottom li 07 -->
+
+            <li
+              class="inline-block text-center border-r-2 border-r-gray-300 pr-2">
+              <a href="#" class="flex flex-col items-center justify-center">
+                <img
+                  src="./img/feature/budget.png"
+                  class="w-20 h-20 object-cover text-center" />
+                <span class="py-2 hover:text-primary">Budget Deals</span>
+              </a>
+            </li>
+            <!-- end of feature bottom li 08 -->
+
+            <li
+              class="inline-block text-center border-r-2 border-r-gray-300 pr-2">
+              <a href="#" class="flex flex-col items-center justify-center">
+                <img
+                  src="./img/feature/daraz_card.png"
+                  class="w-20 h-20 object-cover text-center" />
+                <span class="py-2 hover:text-primary"> Daraz Card</span>
+              </a>
+            </li>
+            <!-- end of feature bottom li 09 -->
+          </ul>
+        </div>
+        <!-- end of feature bottom -->
+      </div>
+    </section>
+    <!-- End feature -->
+
+    <!-- Start flashSale -->
+    <section class="flashSale_area" id="flashSale">
+      <div class="container">
+        <h2 class="title text-xl mb-3">FlashSale</h2>
+
+        <div class="flashSale_wrapper bg-white">
+          <!-- time countdown -->
+          <div
+            class="time_countdown p-3 border-b border-b-secondary flex items-center justify-between">
+            <div class="countdown_content flex space-x-5">
+              <p class="text-primary">On Sale Now</p>
+              <p>Ending in</p>
+              <div class="countdown">
+                <span class="hours bg-primary text-white p-2 rounded-sm mr-2">00</span>
+                <span class="minutes bg-primary text-white p-2 rounded-sm mr-2">00</span>
+                <span class="seconds bg-primary text-white p-2 rounded-sm mr-2">00</span>
+              </div>
+            </div>
+            <!-- end of countdown content -->
+
+            <button class="btn-secondary text-primary uppercase px-3 py-2 border border-primary rounded-sm hover:bg-primary hover:text-white effect_ease">shop more</button>
+          </div>
+          <!-- end of time countdown -->
+        </div>
+        <!-- end of flash sale wrapper -->
+      </div>
+    </section>
+    <!-- End flashSale -->
 
     <!-- Start header -->
     <!-- <section class="header_area" id="header"></section> -->
