--- a/1.basic/js/2.to-do-list/list-2/src/index.html
+++ b/1.basic/js/2.to-do-list/list-2/src/index.html
@@ -40,7 +40,7 @@
         </form>
 
         <div class="list_area py-4 space-y-3">
-          <!-- <div class="single_item flex flex-row items-center">
+          <div class="single_item flex flex-row items-center">
             <div class="item_content flex flex-row items-center basis-11/12">
               <div class="checked m-2">
                 <i class="fa-solid far fas fa-check checked_icon"></i>
@@ -62,7 +62,7 @@
                 <i class="fa-solid far fas fa-trash"></i>
               </button>
             </div>
-          </div> -->
+          </div>
           <!-- end of single item -->
         </div>
       </div>
