cynthaugwu error fix

--- a/1.basic/website/cynthiaugwu/index.html
+++ b/1.basic/website/cynthiaugwu/index.html
@@ -26,7 +26,7 @@
     <div id="main" class="main w-full h-auto font-oxygen bg-black relative">
       <!-- Start Hero Area Section -->
       <section
-        class="hero_area hidden w-full h-screen bg-black text-white p-[2.65vw] relative"
+        class="hero_area w-full h-screen bg-black text-white p-[2.65vw] relative"
         id="hero">
         <!-- Start Header -->
         <header class="header flex items-center justify-between">
@@ -62,7 +62,7 @@
         <!-- end hero text -->
 
         <!-- hero side note -->
-        <div class="side_node  uppercase flex flex-col items-end ">
+        <div class="side_node uppercase flex flex-col items-end">
           <div class="animation_wap">
             <h6 class="animation_content">AVAILABLE FOR FREELANCE</h6>
           </div>
